# yukikaze

./: .gitlab-ci.yml  Cargo.toml  README.md  gitlab-ci.yml
src/: header.rs  lib.rs  rt.rs  utils.rs
src/client/: config.rs  mod.rs  request.rs
src/client/request/: mod.rs  multipart.rs  tags.rs
src/client/response/: errors.rs  extractor.rs  future.rs  mod.rs  redirect.rs
src/client/response/extractor/: mod.rs  notify.rs
src/client/upgrade/: mod.rs  websocket.rs
src/connector/: mod.rs
src/connector/rustls/: connector.rs  mod.rs
src/extractor/: body.rs  cookie.rs  mod.rs  notify.rs
src/header/: content_disposition.pest  content_disposition.rs  content_encoding.rs  mod.rs
src/rt/: client.rs  mod.rs  tokio.rs  tokio_multi.rs
src/tls/: mod.rs
src/tls/rustls/: connector.rs  mod.rs
src/upgrade/: mod.rs  websocket.rs
src/utils/: enc.rs  fut.rs  http.rs  mod.rs
tests/: builder.rs  client.rs
