[package]
name = "yukikaze"
version = "1.0.0-alpha.8"
authors = ["Douman <douman@gmx.se>"]
description = "Beautiful and elegant HTTP library."
readme = "README.md"
documentation = "https://docs.rs/yukikaze"
repository = "https://gitlab.com/Douman/yukikaze"
license = "Apache-2.0"
keywords = ["http", "http-client"]
include = [
    "**/*.rs",
    "Cargo.toml",
    "README.md"
]
categories = ["web-programming::http-client"]
edition = "2018"

[dependencies.hyper]
version = "0.13.0-alpha"
default-features = false

[dependencies]
http-body = "0.2.0-alpha"
http = "0.1"
percent-encoding = "2.1"
bytes = "0.4"
mime = "0.3"
mime_guess = "2"
compu = { version = "0.4", optional = true, default-features = false, features = ["brotli-c", "zlib"] }
lazy_static = "1"

tokio-net = { version = "0.2.0-alpha", features = ["tcp"] }

sha-1 = { version = "0", optional = true }
tokio-rustls = { version = "0.12.0-alpha", optional = true }
webpki-roots = { version = "0.17", optional = true }

tokio-io = { version = "0.2.0-alpha", default-features = false, optional = true }
tokio-executor = { version = "0.2.0-alpha", default-features = false }

serde = "1"
serde_json = "1"
cookie = "0.12"
httpdate = "0.3"
etag = "1"
serde_urlencoded = "0.6"

encoding_rs = { version = "0.8", optional = true }
data-encoding = "2"
getrandom = { version = "0", optional = true }

derive_more = "0.15"
async-timer = { version = "0.6", features = ["tokio_on"] }

[package.metadata.docs.rs]
features = ["encoding", "websocket", "docs"]

[features]
default = ["rustls-on", "compu"]
# Enables usage of rustls, which replaces default connectors
rustls-on = ["tokio-rustls", "webpki-roots", "tokio-io"]
# Enables encoding/decoding of text content
encoding = ["encoding_rs"]
# Enables websocket upgrade
websocket = ["sha-1", "getrandom", "carry_extensions"]
# Specifies that documentation is being generated
docs = []

# Stores request's Extensions in response's Extensions
carry_extensions = []

[dev-dependencies]
tokio = { version = "0.2.0-alpha", default-features = false, features = ["rt-full"] }
